@@ -3,26 +3,21 @@ Hash: SHA256
 
 DIST libXvMC-1.0.8.tar.bz2 305234 SHA256 5e1a401efa433f959d41e17932b8c218c56b931348f494b8fa4656d7d798b204 SHA512 781a53ad1d60a06019ed24150b85a96f2608e6ca0d876de9f06511c0e086cdf837804994e33b51ee8b3714150dc1d6060449e89ab7458476c8535b5b336147bf WHIRLPOOL 67c7d2694310d386b7ad8f6db928fa02af2ba2a9aab3a1e2ff222eca490672474cc3abd767b4fdc2433f90e69f655334eb209747644943a980e6c1ad0f1c3521
 DIST libXvMC-1.0.9.tar.bz2 312777 SHA256 0703d7dff6ffc184f1735ca5d4eb9dbb402b522e08e008f2f96aee16c40a5756 SHA512 658db91ae37cbad468a85301d77b6237674f91fad82679348c26a297bb8c1da81f6b7b13c4ff47a3d6c7f4f8fefdf270d0fde316ec14666fa4e2d1e2c4b337ca WHIRLPOOL 2e5790b3079a0c5571cb824a19a0457e82fb283ffe94d14a1bde1327b6a6e9cb9dd856716f0bcfc2dd2c01f37a9fdc68d0374067b1a18ccc64ed90e41c7d5fe1
-EBUILD libXvMC-1.0.8.ebuild 772 SHA256 6af98189a197500e4f1db19cbd64f75ff4f4ef20c955b9c8b0cdb1cf03ae758c SHA512 5a5457c3a1b71ec29b69c821cea7ee27077ad7967a35bae716be05fbe84712fa7d128ca7740b704d680f6637c5d7267b4a84d1ac437735b6b6b277cd64e4ef55 WHIRLPOOL 8ca1fd07349f940f349f104280bc47ad0e01b96c82e95c54330d2b3c19d4869e56bef3a29d96e981ebf4c49b76a23b504c1d2566a1beeba82493c7ac2c0ff83b
-EBUILD libXvMC-1.0.9.ebuild 782 SHA256 3ae96606861101a71e7309818a76e3bdb355961c91418e3fdd1f536118debe31 SHA512 7dbd77eea84d85ac77991667d941e7e4b8c2421759bbb9e4be93f04abd8a6c97a321c12a9cdb0b77ff6bd08d1102eb6609b48b0db54adc7c14f5d254688c039a WHIRLPOOL c5cd39aaabd85f2751d07f875a4a6170de9b90f4c8656697a73d527dbd185be518d2d220653801acbc677d21700e935cdc0caa46b35ecaa95d661dc5dcc23f1c
-MISC ChangeLog 9776 SHA256 ab38b966f4b832999d7894ba12dea9f5dbb2f15ac614e5d22ad9975a7be10d99 SHA512 ec793d331d1fb3fec864cfbdf1ef4b75a9f074db82a668054737c490be73f355f0ad6307c966ee78060b02da7c3561137e18b6b7230a733db8e5cd9197cb79f9 WHIRLPOOL 09bfc91f3b938a0657e19a4d1bd16df5f55257dad9031eafccd24341773a58e90340581154c8b88ea4e5ded470f00bcea5c7f4a8b6f5f8b9ad4406ec3f5e8b25
+EBUILD libXvMC-1.0.8.ebuild 771 SHA256 0f6fc3720f4baf9252a69051a04ff7a793e100ebb86726c128be5a2d7cc37737 SHA512 30270c2d328ebdbeaf589c6f5f76b7d776341b6e55ea91267ed4fdf67117579d242d66243bad6da6612b2e3c6f6fbc26fd7ccf3219a15837f2a84979137748b4 WHIRLPOOL 2d344501e14a09dd69e4bbcbdf019e211814d3fbad6762a8b822a46d3924e2e7a12f5dc71257b4b16068057192782a4d77446fde0342a65abfb39bac33ad712c
+EBUILD libXvMC-1.0.9.ebuild 779 SHA256 9e2eaf352ddcb5884f013d35566bf5d35bf966166114fc7a0718d29d2956ae1e SHA512 ac64c3ba2a3fa1d40737480f420a5d8f9c0586330aab064643ed9c96454c7d0a2e9c7d4a1e336e77407e1268aeefe7b6ce1bdb3e3e989853b2ad33949da1e9a2 WHIRLPOOL 6affa92e9821e2348e3f9f88b43936be0469ab5648ae6ac2ab8a863e3536b12054b3557da39d3e5f9c33e544d6503af16eaa6cde16a9d566163f990098d91b30
+MISC ChangeLog 9939 SHA256 6e16484580bac75dc3e66d2b54ec77c7355946be40a25e10012c90e74fbc2dd5 SHA512 e96fe391de0ff3ad7f915ed335dfcae727ee7310e76fc4fa67dd672a747fae8be4d236d8186d1941b9908e4120a46e84c95f5bd2f102d437855191718d966fc7 WHIRLPOOL dbf41d438d9c779d8985ece03c6e1815cff44d2d9da39235e31c9debce971f43e81f2810c0c6fe289ac6cb649165799df4a412227f11200e21783ae1d549b849
 MISC metadata.xml 156 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 SHA512 daa9bb2a9b1a16220327bc394f10d93a1a8a427bfbed8808cd247c1dfd5a5b87a4945d55d8243e07fede2c8182a208c618ebd483773d77e9d23862ec77016019 WHIRLPOOL 691e028648bb8b60771d74ef718c51fdb0f4a587e984f6ac4c13d7796415ecf770df2e0fd766399091771924bb65995e9bb290baa35971c56e07d76f2bbf6d93
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVFDh0XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RDFCODdDQUUxMkUwNkJCNjUyMDMxOEIy
-MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYRN5MQAJNN8ooiZSH1DPYYSJan//CV
-yZzMt0X5Rj54CsN9xJJalO34l5ajRDd00RfSspzmT+fKRrVy3BXJXCnIEp71aIiW
-2YeJkRcUe18wU260eV6+o27nL6N3Ohm/QX0NZAoiv20bctaXCnyU4EykY78QJ38P
-R/JxseBaWN5oJVXPv8GMxNdsxSWpcFz3pM/z8HO34AiepGUflrRmPQyVBjE6UEcw
-/3kWgqOu88EoZtWm99vKVQD/IExD6uJwCNReafctYARI9CUSG5CWUWUurzQgL2V4
-pFpV4b3hb18PPJ9dshxe5A5CF1KYk+eNQry0uAO7iP9idq2W1y3tHB7D4TN2EKFn
-S3ksHDQoKW8EP6cGUAJiUxJ7dHiWWURuuGiHHHN1hfcZP5u86RqFIsma9HRi6qeG
-yqs5NEbqyp7wJKFnibdJaKXFlS6ClNk/RPVP8S+nplMnGJ51ei4cQT9QUCrm0G/n
-VS+3yPycNBdwUYWA7xEeTUZSWpUyX2W830YfB9P3S0iP/ID95r3HybBCaAFPKGV8
-pvybCA/3RRCNTXmfjpMDbQRYlH6OETbal2GG3vSYoOTHCQXRHGf0n8Bhfxiq4r0v
-qs4m+wvPl/1mPbKPX4YyOYL2+fI8iPoawTCmUjXld76OOLwqD9VdyQ4zQmc2P1LC
-9f1c2mgtneKLeRD0mJe4
-=jNaL
+iQGcBAEBCAAGBQJVGwOwAAoJEJQzkH1pP7W41XkL/3TOvliT/QojMW2i69hVt2JZ
+Ctq5AUaUprd4H+VPbkTtVdnM0QuCuxs8m0gBHdMBpGjSdQyspG554Fsd6YwJ4adn
+MaEyHBXI+vQPxnFZsRfRxrPLIMn2FGLmvQsjmDwnRPcCYEwLcpQfZx7Bg8Cu7zIJ
+rmUdJi7Q8x178XmmM1LOoce1HIIQj3GUPvUkUoKUYgb41CPXgzLirOK32n8Ra9/+
+dAg81U/+TGdwqgLnIFMApPCKRxv1xxHAVcQbRFB1no2K+8YPM1QUTd/E9vCPEiwZ
+LZBSFW5gHszOHOeXrCAg3dP+PyZ6IVM6wy9NNVjX3Degxbu4/6D32Vn9C6/kgONS
+JR8WD7CwtuCKIu0iQixvZKAoZ4BSDlG4hNskw7KPG4flaAxnvW3ewBuj9s3Qqf07
+JpNG12smQOa7GSzqdPELWq3+Q5DjV8OUNnVDQWIl7/xMH0gTdOpJqH5jXHBs2Au9
+auOK81O7LbgE+q0GnysZbAqBvy2OhziOLhoroGoONw==
+=2O5k
 -----END PGP SIGNATURE-----
