@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXvMC/libXvMC-1.0.8.ebuild,v 1.11 2014/06/18 21:12:26 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXvMC/libXvMC-1.0.8.ebuild,v 1.12 2015/03/31 20:29:33 ulm Exp $
 
 EAPI=5
 
@@ -18,4 +18,4 @@ RDEPEND=">=x11-libs/libX11-1.6.2[${MULTILIB_USEDEP}]
 	>=x11-proto/videoproto-2.3.1-r1[${MULTILIB_USEDEP}]
 	>=x11-proto/xproto-7.0.24[${MULTILIB_USEDEP}]"
 DEPEND="${RDEPEND}"
-PDEPEND="app-admin/eselect-xvmc"
+PDEPEND="app-eselect/eselect-xvmc"
