@@ -3,27 +3,22 @@ Hash: SHA256
 
 DIST libnotify-0.7.5.tar.xz 275804 SHA256 4378cb47874ba4d5f759b7890d8d28d086e81d3f0bd4f6e84e5ab66d82ffb652 SHA512 f4503a4325e6051baaa702c3c49552092e853929688aa569984c4f044595a268256a91c4b68c68af79528e0b50f6e9968a7d55d4cbcdb9679a3376ed9f884285 WHIRLPOOL 5eb4bd5ba8d8aad09a33b44ac43089ac748c0cf810876c797d79c387b4356b522724b3596ff772cd019b80c09785d514c0e097af0a70a21d00e04f30e77ff10c
 DIST libnotify-0.7.6.tar.xz 280388 SHA256 0ef61ca400d30e28217979bfa0e73a7406b19c32dd76150654ec5b2bdf47d837 SHA512 5d656ee7ee5caeb95aec4adb973795dc72fc620cd36b9fe3d4f910951945bd5df70ee1c422cd6aca9c38a9ba2760562e479fc8fb9269449924a5b24d762d03df WHIRLPOOL e619c8d10790f5b78730a2599c407bc951de68b189f460c72999776eaf92014aded0953ca06398cce7ad09fd8c87e1c7727cea4f4c81eccee0a8b2f2bafd195b
-EBUILD libnotify-0.7.5-r1.ebuild 1461 SHA256 2d8e91d62dd057616d821a1b68da70a07a901f7f3110ec6b704f507c511381cb SHA512 861ce6928b04292451c9ec049673b339243d2b702d887d750d63f8b327ee75c2c4e079c33855758b3b560f7a0973270e03e27e3b4b25c1d09df4f4ff20b4816a WHIRLPOOL 77baa26610f18ac9a7302ed0b091e1b81d189ab40b997a9b1d5502635767fa4751b71d301091854df03a1cefc647d143e81cc8ff2a3d0a433b6fd1a51fbabcd9
-EBUILD libnotify-0.7.6-r1.ebuild 1912 SHA256 5fd26c3a915d89abdd377fc1e88b4d1d9c55542852f467f07ee602873f51dc13 SHA512 430eb93c6f43eda019bb1afcd38e20cf221c7a1f24fbcc446b55a554b6a8e1d99a159e13def983ece6c66a0ef403384c3ba5b63bcca16da9e976fa3b2242f11a WHIRLPOOL 3391ece39cb701be57a48e63f4092e6b5bbffc09f0b84bf8ddfc26489a124edb602b620f08b3aa1ae3ee09ff46c33df3cf62045dcdbe5586135ac3f336ceddfb
-EBUILD libnotify-0.7.6.ebuild 1435 SHA256 2cb4c84f2cf2eaaa9f9df3e4c52c063b69ec027f82b43093c71304d7f40aafbd SHA512 451ea54bf1db39875c74fe4dec24438845dff4bd549f0084913939cdddefe84a6dbccde46ff3a13bfa51fb724eb56c7d7f8f098f218633ade47078d1867d1ce7 WHIRLPOOL d2037f97a2dba098421249671c74360c10febc6f845d577d6a8a090d178bb1f4aa82f8a5d2498f0d186a50f2f39c4b34fb5609927a29d104336a709c853be028
-MISC ChangeLog 13919 SHA256 789d929ec7cd6e214317c3c53f73fd60a578c9694d3947a78245f2d646236d9a SHA512 f2efe01650f128efd2e3325f77ec96425da263d3e16b260541b36ad96eb600a2f26db53c83f02be4cda5ca80271edd9320f1e4ecc797931a403af238694dff2c WHIRLPOOL 272636ff637ba06cddd50e48c6d6f2e8a52fe058b049f549ced48e6ea79857f432f33ba8a4db8fdd45ff7b79dcc17269a5a5897f3f5e3931c25996cb8c48fc3b
+EBUILD libnotify-0.7.5-r1.ebuild 1457 SHA256 ecba5d57f6bf8ec727f631fe19a2d591f3afdae5ff72e5a0d5683b6d0dbd21fb SHA512 e94ee0250937b684dc3e3ffad004258b86dffeb95d97427129ff8ef7583ec518c30ae4404fdab1ed5f2accfccef04a3d9560e9b2ce098f86d281a12ece253c62 WHIRLPOOL 0fd12e3bb709fcc6655c907594535e3add9b0c05448849ffb481496306c2cf04a3994612b04988e0f764514b69195c645c752b9c37317bdd9540a8023aefcccf
+EBUILD libnotify-0.7.6-r1.ebuild 1908 SHA256 f2980925e58334992864f59a5fc22cfda93c8acd774786a77288401dc00a869f SHA512 ad0e0277fd2c79d082bff9744cdd2dfc6b4251534314996a8e5119b8954ba091e1a5f7f8bb33e0d51619ca78657c1c112a4ab367b179213234dc0ce201d15a72 WHIRLPOOL bd48ec44593dfb10c4812c8a9abab94aef2d041e03a87c5943fb908f821bc4027c039a2e4326d12a400868e4a4390ae1a45809aecbb36eeef6486a286d67830f
+EBUILD libnotify-0.7.6.ebuild 1431 SHA256 2e0965cc1dcdc01e29e56003100d53e61005b7c822a5d19d42543d136085a295 SHA512 e1df1feb1529a3659aa15e09e8f38189271400eaa9b06b7483962160d0c67f9f89339b96e04a0a75f8af158e1a7a1c244b190c9fe0246a73e0f35ba8e1769fcc WHIRLPOOL 25a3cd26adf710cdafcef06dfefefbb1908b95ef1feb4de3afaf12d67a304604b5ededed5def862e0470b5addf839cf2ea0547f3b9798ee916b6a264c41c7421
+MISC ChangeLog 14115 SHA256 9bf60a9940c9a5bcd56fda679545ab55e64993361585899e78f9562e191e9754 SHA512 a11e9d66b76525f775d15108c1d491b947cdd36d469e82fdfb427ee5cb839ac3c1e32f05ff012fa790a984e1cc53beee4d1e637d48951d5b99d950faa0d2aff2 WHIRLPOOL 61004edee73d3dd7d0ae65ba6b248f4a0e814f044dfbe8f1c764e238d7d7808bf49885eff0cc9fe5454b9daf35e3dae7c141609e59cf7c48c5434d73edc197b4
 MISC metadata.xml 166 SHA256 a4f7a9f8f89d2da4f8d0c2d6acdacc96c38d4c076d23d8b2081f2a149ff15a56 SHA512 e83280bba00e234b1be03fa85705f2085efb89dcd5a37e27b8357542080c28a3ddbcf326acb81494370fe0b12fe9f82541f8947ed289f05612c29c7c08c363c2 WHIRLPOOL 706c229f08da0750da9b5b8b642adf687ab31aee0b53e97b54dc678dec72162dbacbf3ed6ad9ef8c97897cec050a74b7153339133f8fe35063e5febd87b7d121
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUcpzoXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RTNCRkUzRDRBNkI2MEEwQkYwQzMyOEEx
-OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyNwJcP+gPumozwPqnyYdD3EBfYh7xm
-ziQdae8JdRAanBARfFdWmvmU6n5HqM/TrZXRd5EFWqTsr2LL4ZZhAQFAPNCkUYF9
-ho6FRowjZPOKoH9gmSNqzBXJqb0famtLPz89XzAY+gYGgcwOgmUfFr89n0/Qg/ee
-NxNg7++VJv+LAUC4JtbdvtRTT01lT2KXUAuD7W/gE+ceP/C9m6ssV+W/eOClcDI/
-CoBEb32Dn4/NrcVEdxCtkKYRlXoq/CRu345d75nTEx1ecgqOeH15EjV/wI/qcjHz
-6YRMZC+HDbQznTLaIQ/Y9owq8tpVraO/OWuroX9ZzLzk3uESWrJPszqvYE1WBhOL
-jDdAKfT60NxoSOOzXUDD3SHA6LWW/L6tU5Lv6cBGlpO9Xq0ppN2i+GgSaVLg9tlW
-MHcecIfI2gIWLgstZmnWVkDokLbVVSB4/xYlxzC3z1I0dKlKno7sDKpprIUspc+p
-UCwgsGwgWpMuYPjdTfgv6O+BQGxfGuAMxy77yhFCE9MbYcus15IAyv8zXmmnrxz2
-QcCbxdO4RUXBj0m091eNw0N6uCwhonEppVjCXL1H5P4Fzt9+RhOu/2lbAVyI7qra
-x6jk7WaIBNQ89fINI8exK2CfZtaoKnA5oGccXwzEHKSJMj9JKixyOf375pFsDuDu
-5xbsv3Zwo1FRlrQCHShz
-=uuvS
+iQGcBAEBCAAGBQJVGwL+AAoJEJQzkH1pP7W4FAAL/jPlE9qOAI2AAi2z6tTERU1w
+sJoH4hP4Iz+K0RgGoRtI23mCPJymTFeyglZjrJ8TV628+RSTfvdfRwyQyyCJkv//
+bcSLkpFbinGaKqvYdiq0dfRqf0WuIb/XBoNrsx/o9ScPlDdYCceKdSbFYWUVqZ6P
+gcpUTKlJm2Itzd5SngVz6KIv0awYIxOT4UPoYhw5vzsCzSM7mUaOGhV87McdHJhQ
+UzJUWhwwXP1vktpaTl1heL89QBsYy8IgdEDZTnhokfticCbSRvKIGly6xtU/Hi5b
+PLwjegs4MlPF+0Gfhurpwy5hWyweOqW4tRJyJpMTcTeTvI7EM1uK8acfb+rgSM2Y
+lbPivryFQ6AWuxyhYmezf/gJNj2hpvqpzTIW1qNMF5or/ZM7STo0tOv1HQNcOc/h
+k91vw4gLX4otk9EJrsVpCEgdW/OrdjZ0QZCxvyZmyN4uOR02yJ37JUiaHhQjPuuu
+Ygt26j9NolIAAooxhQuJdOlGCPhE9X+nK3sz4dQhsQ==
+=ku1w
 -----END PGP SIGNATURE-----
