@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libnotify
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libnotify/ChangeLog,v 1.105 2014/11/24 02:50:14 tetromino Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libnotify/ChangeLog,v 1.106 2015/03/31 20:26:35 ulm Exp $
+
+  31 Mar 2015; Ulrich Müller <ulm@gentoo.org> libnotify-0.7.5-r1.ebuild,
+  libnotify-0.7.6.ebuild, libnotify-0.7.6-r1.ebuild:
+  Update dependency after package move of eselect modules to app-eselect.
 
 *libnotify-0.7.6-r1 (24 Nov 2014)
 
