@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/libXvMC
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXvMC/ChangeLog,v 1.81 2015/03/26 16:48:21 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXvMC/ChangeLog,v 1.82 2015/03/31 20:29:33 ulm Exp $
+
+  31 Mar 2015; Ulrich Müller <ulm@gentoo.org> libXvMC-1.0.8.ebuild,
+  libXvMC-1.0.9.ebuild:
+  Update dependency after package move of eselect modules to app-eselect.
 
 *libXvMC-1.0.9 (26 Mar 2015)
 
